# antarray

./: .gitignore  .ignore  Dockerfile  Makefile  README.md  TODO.md  alex.py  analyze.py  beamforming_example.py  data.py  dataset_generator.py  dev.ipynb  dev2.ipynb  diffusion.md  flow.py  generate_dataset.py  main.py  model_trainer.py  predict.py  pyproject.toml  train.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
docs/: weight_initialization_study.md
openems/: antenna_array.py  single_antenna.py
src/: Patch_Antenna_Array.py  Simple_Patch_Antenna.py  __init__.py  analyze.py  antenna_array.py  basics.py  cst.py  data.py  diffusion.py  flow.py  flowmatching.py  gradientdescent.py  interference.py  milestone.py  physics.py  ref.py  regression.py  shared.py  single_antenna.py  spec.md  tapering.py  training.py  utils.py
