[project]
name = "openems"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
    "matplotlib>=3.10.0",
    "h5py>=3.13.0",
    "tqdm>=4.67.1",
    "ruff>=0.9.5",
    "ty>=0.0.1a14",
    "cyclopts>=3.22.1",
]

[project.optional-dependencies]
jax = [
    "jax[cuda12]==0.6.2 ; platform_system == 'Linux'",
    "jax==0.6.2 ; platform_system != 'Linux'",
    "flax>=0.10.7",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.13",
]

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pyflakes
    "F",
]
exclude = ["openems/*"] # these scripts run inside OpenEMS container
