[project]
name = "openems"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
    "matplotlib>=3.10.5",
    "h5py>=3.13.0",
    "tqdm>=4.67.1",
    "ruff>=0.12.7",
    "ty>=0.0.14",
    "cyclopts>=3.22.1",
    "joblib>=1.5.1",
]

[project.optional-dependencies]
jax = [
    "jax[cuda12]>=0.7.0 ; platform_system == 'Linux'",
    "jax>=0.7.0 ; platform_system != 'Linux'",
    "flax>=0.12.0",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.13",
]

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pyflakes
    "F",
]
exclude = ["openems/*"] # these scripts run inside OpenEMS container
